<resources>
    <string name="app_name">My Application</string>
    <string name="login">" Login"</string>
    <string name="sign_up">Sign Up!</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="my_watchlist">My Watchlist</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="streampal">StreamPal</string>
    <string name="search_for_a_title">Search for a title!</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="platform">Platform</string>
    <string name="remove">Remove</string>
    <string name="genre">Genre</string>
    <string name="your_watchlist">Your Watchlist</string>
    <string name="update">Update</string>
    <string name="update_platform">Update platform:</string>
    <string name="platform_uc">Platform</string>
    <string name="title_colon">Title:</string>
    <string name="search_for_movies">Search for movies</string>
    <string name="update_a_title">Update a title!</string>
    <string name="year_colon">Year:</string>
    <string name="platform_colon">Platform:</string>
    <string name="genre_colon">Genre:</string>
    <string name="plus_add_movie">+ Add Movie</string>
    <string name="manage_users">Manage Users</string>
    <string name="search_for_users">Search for users</string>
    <string name="user_found">User found:</string>
    <string name="remove_user">Remove User</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="add_title">Add Title</string>
    <string name="update_title">Update Title</string>
    <string name="add_movie_plus">Add Movie +</string>
</resources>