<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ocean_blue"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/signup_textview"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/sea_green"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/enter_username_edittext"
        android:layout_width="320dp"
        android:layout_height="77dp"
        android:layout_marginTop="44dp"
        android:background="@color/white"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_textview" />

    <EditText
        android:id="@+id/enter_password_edittext"
        android:layout_width="320dp"
        android:layout_height="77dp"
        android:layout_marginTop="56dp"
        android:background="@color/white"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_username_edittext" />

    <EditText
        android:id="@+id/confirm_password_edittext"
        android:layout_width="320dp"
        android:layout_height="77dp"
        android:layout_marginTop="56dp"
        android:background="@color/white"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_password_edittext" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_edittext" />

    <TextView
        android:id="@+id/signin_clickable_text"
        android:layout_width="100dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/sea_green"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_button" />


</androidx.constraintlayout.widget.ConstraintLayout>