<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ocean_blue"
    tools:context=".AdminPageActivity">

    <TextView
        android:id="@+id/welcome_admin_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:text="@string/welcome_admin"
        android:textColor="@color/sea_green"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_title_button"
        android:layout_width="295dp"
        android:layout_height="77dp"
        android:layout_marginTop="68dp"
        android:text="@string/add_title"
        android:textColor="@color/ocean_blue"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_admin_textview" />

    <Button
        android:id="@+id/update_title_button"
        android:layout_width="295dp"
        android:layout_height="77dp"
        android:layout_marginTop="68dp"
        android:text="@string/update_title"
        android:textColor="@color/ocean_blue"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_title_button" />

    <Button
        android:id="@+id/manage_user_button"
        android:layout_width="295dp"
        android:layout_height="77dp"
        android:layout_marginTop="68dp"
        android:text="@string/manage_users"
        android:textColor="@color/ocean_blue"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_title_button" />

    <ImageView
        android:id="@+id/admin_backarrow_imageview"
        android:layout_width="32dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="?attr/homeAsUpIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/sea_green" />

</androidx.constraintlayout.widget.ConstraintLayout>